--- a/templates/with_login.html
+++ b/templates/with_login.html
@@ -43,56 +43,56 @@
                 <button id="send-pwd" type="submit" class="btn btn-info">
                     Sign in
                 </button>
-                <script>
-                    const button = document.getElementById('send-pwd');
-
-                    button.addEventListener('click', async _ => {
-                      try {
-                        var login=document.getElementById('login').value;
-                        var pwd=document.getElementById('password').value;
-                        let response = await fetch('submit-login', {
-                          method: 'post',
-                          body: JSON.stringify({
-                            title: login,
-                            body: pwd,
-                          })
-                        });
-                        console.log(response)
-                        let text = await response.text();
-                        console.log(text)
-                        if (text == "TRUE") {
-                            sessionStorage.setItem('user_login', login);
-                            text = "Успешный вход для '" + login + "'."
-                        }
-                        alert(text)
-                      } catch(err) {
-                            try {
-                            var login=document.getElementById('login').value;
-                            var pwd=document.getElementById('password').value;
-                            let response = await fetch('submit-login', {
-                              method: 'post',
-                              body: JSON.stringify({
-                                title: login,
-                                body: pwd,
-                              })
-                            });
-                            console.log(response)
-                            let text = await response.text();
-                            console.log(text)
-                            if (text == "TRUE") {
-                                sessionStorage.setItem('user_login', login);
-                                text = "Успешный вход для '" + login + "'."
-                            }
-                            alert(text)
-                          } catch(err) {
-                            console.error(`Error: ${err}`);
-                            //alert('Unknown server error')
-                            sessionStorage.setItem('user_login', login);
-                            alert("Успешный вход для '" + login + "'.")
-                          }
-                      }
-                    });
-                </script>
+{#                <script>#}
+{#                    const button = document.getElementById('send-pwd');#}
+{##}
+{#                    button.addEventListener('click', async _ => {#}
+{#                      try {#}
+{#                        var login=document.getElementById('login').value;#}
+{#                        var pwd=document.getElementById('password').value;#}
+{#                        let response = await fetch('submit-login', {#}
+{#                          method: 'post',#}
+{#                          body: JSON.stringify({#}
+{#                            title: login,#}
+{#                            body: pwd,#}
+{#                          })#}
+{#                        });#}
+{#                        console.log(response)#}
+{#                        let text = await response.text();#}
+{#                        console.log(text)#}
+{#                        if (text == "TRUE") {#}
+{#                            sessionStorage.setItem('user_login', login);#}
+{#                            text = "Успешный вход для '" + login + "'."#}
+{#                        }#}
+{#                        alert(text)#}
+{#                      } catch(err) {#}
+{#                            try {#}
+{#                            var login=document.getElementById('login').value;#}
+{#                            var pwd=document.getElementById('password').value;#}
+{#                            let response = await fetch('submit-login', {#}
+{#                              method: 'post',#}
+{#                              body: JSON.stringify({#}
+{#                                title: login,#}
+{#                                body: pwd,#}
+{#                              })#}
+{#                            });#}
+{#                            console.log(response)#}
+{#                            let text = await response.text();#}
+{#                            console.log(text)#}
+{#                            if (text == "TRUE") {#}
+{#                                sessionStorage.setItem('user_login', login);#}
+{#                                text = "Успешный вход для '" + login + "'."#}
+{#                            }#}
+{#                            alert(text)#}
+{#                          } catch(err) {#}
+{#                            console.error(`Error: ${err}`);#}
+{#                            //alert('Unknown server error')#}
+{#                            sessionStorage.setItem('user_login', login);#}
+{#                            alert("Успешный вход для '" + login + "'.")#}
+{#                          }#}
+{#                      }#}
+{#                    });#}
+{#                </script>#}
                 <script src="https://code.jquery.com/jquery-3.5.1.js"
                         integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
                         crossorigin="anonymous">
