--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
         .sidenav a {
             padding: 0.5rem 1rem;
             text-decoration: none;
-            color: #0c0c0c;
+            color: #f8f6f6;
             font-family: "Open Sans", serif;
             display: block;
             transition: 0.4s;
@@ -44,7 +44,7 @@
         }
 
         .sidenav a:hover {
-            color: white;
+            color: #b2a9a9;
             background: #5a728a;
         }
 
@@ -146,24 +146,6 @@
         <a href="#" style="font-family: 'Roboto', sans-serif;">Equipment</a>
         <a href="/contacts" style="font-family: 'Roboto', sans-serif;">Contacts</a>
     </div>
-    {#    <nav class="topnav">#}
-    {#      <a href="#" class="ham-icon" style="display: inline-block; vertical-align: center;">#}
-    {#          <div class="fs-2 mb-3">#}
-    {#                    <img src="{% static 'fav-planet.png' %}" alt="Geophysical Observatory Mikhnevo" width="32" height="32"/>#}
-    {#                    <span style="float: right; color: #ffffff">Geophysical Observatory Mikhnevo</span>#}
-    {#          </div>#}
-    {#        <svg width="30" height="30">#}
-    {#            <path d="M0,5 30,5" stroke="#ffffff" stroke-width="5"/>#}
-    {#            <path d="M0,14 30,14" stroke="#ffffff" stroke-width="5"/>#}
-    {#            <path d="M0,23 30,23" stroke="#ffffff" stroke-width="5"/>#}
-    {#        </svg>#}
-    {#      </a>#}
-    {#            <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">#}
-    {#                <div class="fs-3 mb-1">#}
-    {#                    <img src="{% static 'fav-planet.png' %}" alt="Geophysical Observatory Mikhnevo" width="32" height="32"/>#}
-    {#                    <span style="text-align: center; justify-content: center; color: #ffffff">Geophysical Observatory Mikhnevo</span>#}
-    {#                </div>#}
-    {#            </a>#}
     <nav class="topnav">
         <header class="header">
             <div class="fs-1">
@@ -176,16 +158,10 @@
                 </a>
                 <a href="/" class="header_1" style="text-align: center">
                     {#                  <img src="{% static 'fav-planet.png' %}" width=7% height=7%>#}
-                    <span style="display: inline-flex; align-items: center; justify-content: center; color: #ffffff; margin: 0 auto; font-size: 3vw;">Geophysical Observatory Mikhnevo</span>
+                    <span style="display: inline-flex; align-items: center; justify-content: center; color: #ffffff; margin: 0 auto; font-size: 30px;">Geophysical Observatory Mikhnevo</span>
                     {#              font-size: 3vw;#}
                 </a>
             </div>
-            {#            <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">#}
-            {#                <div class="fs-3 mb-1">#}
-            {#                    <img src="{% static 'fav-planet.png' %}" alt="Geophysical Observatory Mikhnevo" width="32" height="32"/>#}
-            {#                    <span style="text-align: center; justify-content: center; color: #ffffff">Geophysical Observatory Mikhnevo</span>#}
-            {#                </div>#}
-            {#            </a>#}
         </header>
         <script>
             document.querySelector("a.ham-icon").addEventListener("click", function (event) {
@@ -234,79 +210,44 @@
     <img class="img1" src="{% static 'map.jpg' %}">
     <div class="container px-4 py-5" id="main-contents">
         <h2 class="pb-2 border-bottom"
-            style="font-family: 'Roboto', sans-serif; font-size: 3vw;">Меню</h2>
+            style="font-family: 'Roboto', sans-serif; font-size: 30px;">Меню</h2>
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-2">
             <div class="col d-flex">
                 <div class="icon-square text-bg-light d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-                    {#                        <svg class="bi" width="1em" height="1em">#}
-                    {#                            <use xlink:href="#cpu-fill"></use>#}
-                    {#                        </svg>#}
                 </div>
-                <!--                    <div>-->
-                <!--                        <h3 class="fs-2">Уроки</h3>-->
-                <!--                        <p class="fst-italic">Список уроков, карточки со словами и переводами. </p>-->
-                <!--                        <p class="fst-italic"> Для самопроверки Вы можете пройти тест. </p>-->
-                <!--                        <a href="/lessons" class="btn btn-primary">Посмотреть</a>-->
-                <!--                    </div>-->
-                <!--                </div>-->
-                <!--                <div class="col d-flex">-->
-                <!--                    <div class="icon-square text-bg-light d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">-->
-                <!--                        <svg class="bi" width="1em" height="1em">-->
-                <!--                            <use xlink:href="#cpu-fill"></use>-->
-                <!--                        </svg>-->
-                <!--                    </div>-->
                 <div>
-                    <!--                        <h3 class="fs-2">Форма для добавления слова</h3>-->
-                    <!--                        <p class="fst-italic">Вы можете добавить свое слово, его перевод и иллюстрацию по желанию. </p>-->
                     <a href="/date-selection" class="btn btn-primary"
-                       style="font-family: 'Roboto', sans-serif; background-color: #5a728a; border: #5a728a; width: 150px; height: 45px; margin: auto; display: inline-flex; justify-content: center; align-items: center">
+                       style="font-family: 'Roboto', sans-serif; font-size: 18px; background-color: #5a728a; border: #5a728a; width: 150px; height: 45px; margin: auto; display: inline-flex; justify-content: center; align-items: center">
                         VLF data
                     </a>
                 </div>
             </div>
             <div class="col d-flex">
                 <div class="icon-square text-bg-light d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-                    {#                        <svg class="bi" width="1em" height="1em">#}
-                    {#                            <use xlink:href="#cpu-fill"></use>#}
-                    {#                        </svg>#}
                 </div>
                 <div>
-                    <!--                        <h3 class="fs-2">Статистика</h3>-->
-                    <!--                        <p class="fst-italic">Сколько уроков пройдено и какие баллы за тесты? </p>-->
                     <a href="/stats" class="btn btn-primary"
-                       style="font-family: 'Roboto', sans-serif; background-color: #5a728a; border: #5a728a; width: 150px; height: 45px; margin: auto; display: inline-flex; justify-content: center; align-items: center">
+                       style="font-family: 'Roboto', sans-serif; font-size: 18px; background-color: #5a728a; border: #5a728a; width: 150px; height: 45px; margin: auto; display: inline-flex; justify-content: center; align-items: center">
                         Equipment
                     </a>
-                    <!--                    </div>-->
                 </div>
             </div>
             <div class="col d-flex">
                 <div class="icon-square text-bg-light d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-                    {#                        <svg class="bi" width="1em" height="1em">#}
-                    {#                            <use xlink:href="#cpu-fill"></use>#}
-                    {#                        </svg>#}
                 </div>
                 <div>
-                    <!--                        <h3 class="fs-2">Статистика</h3>-->
-                    <!--                        <p class="fst-italic">Сколько уроков пройдено и какие баллы за тесты? </p>-->
                     <a href="/stats" class="btn btn-primary"
-                       style="font-family: 'Roboto', sans-serif; background-color: #5a728a; border: #5a728a; width: 150px; height: 45px; margin: auto; display: inline-flex; justify-content: center; align-items: center">
+                       style="font-family: 'Roboto', sans-serif; font-size: 18px; background-color: #5a728a; border: #5a728a; width: 150px; height: 45px; margin: auto; display: inline-flex; justify-content: center; align-items: center">
                         Data
                     </a>
-                    <!--                    </div>-->
                 </div>
             </div>
             <div class="col d-flex">
                 <div class="icon-square text-bg-light d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-                    {#                        <svg class="bi" width="1em" height="1em">#}
-                    {#                            <use xlink:href="#cpu-fill"></use>#}
-                    {#                        </svg>#}
                 </div>
                 <div>
-                    <!--                        <h3 class="fs-2">Контакты</h3>-->
-                    <!--                        <p class="fst-italic">Общая таблица со всеми словами из карточек. </p>-->
                     <a href="/contacts" class="btn btn-primary"
-                       style="font-family: 'Roboto', sans-serif; background-color: #5a728a; border: #5a728a; width: 150px; height: 45px; margin: auto; display: inline-flex; justify-content: center; align-items: center">
+                       style="font-family: 'Roboto', sans-serif; font-size: 18px; background-color: #5a728a; border: #5a728a; width: 150px; height: 45px; margin: auto; display: inline-flex; justify-content: center; align-items: center">
                         Contacts
                     </a>
                 </div>
