--- a/templates/vlf_data.html
+++ b/templates/vlf_data.html
@@ -1,45 +1,51 @@
 {% extends "base_page.html" %}
 
 {% block pagetitle %}
-All lessons
+    All lessons
 {% endblock %}
 
 {% block page-title %}
-<p style="font-size:50px;" xmlns="http://www.w3.org/1999/html">Список слов по урокам </p>
+    <p style="font-size:50px;" xmlns="http://www.w3.org/1999/html">Список слов по
+        урокам </p>
 {% endblock %}
 
 {% block page-lead %}
-{#Этот сайт предназначен для изучения английского языка по карточкам. <br/>#}
-{#Здесь Вы можете выучить новые слова, а потом проверить себя с помощью теста. <br/>#}
-{#Также можно посмотреть общую статистику успеваемости.#}
-{#<body>#}
-{#    {% load static %}#}
-{#    <img src="{% static 'pic_forest.jpg' %}" alt="Figure"/>#}
-{#</body>#}
+    {#Этот сайт предназначен для изучения английского языка по карточкам. <br/>#}
+    {#Здесь Вы можете выучить новые слова, а потом проверить себя с помощью теста. <br/>#}
+    {#Также можно посмотреть общую статистику успеваемости.#}
+    {#<body>#}
+    {#    {% load static %}#}
+    {#    <img src="{% static 'pic_forest.jpg' %}" alt="Figure"/>#}
+    {#</body>#}
 {% endblock %}
 
 {% load static %}
 
 {% block content %}
-<br>
-<style>
-        .btn {
-            float: left;
-            display: inline-block;
-            background: #c1d1d3;
-            font-size: 16px;
-            color: #0e0e0e;
-            border: #c1d1d3;
-            border-radius: 10px;
-        }
-        .btn:hover{
-            background: #9aa9ab;
-        }
-</style>
-{#<a href="/date-selection" class="btn btn-info" style="font-size: 20px; color: white; background-color: #9aa9ab; border: #9aa9ab;">Вернуться к выбору даты</a>#}
-<a href="/date-selection" class="btn">Вернуться к выбору даты</a>
-<br>
-{#    <h3 class="fs-2">{{ date_test }}</h3>#}
+    <div class="container px-4 py-5" id="main-contents">
+        <br>
+        <style>
+            .btn {
+                float: left;
+                display: inline-block;
+                background: #c1d1d3;
+                font-size: 16px;
+                color: #0e0e0e;
+                font-family: 'Roboto', sans-serif;
+                border: #c1d1d3;
+                border-radius: 10px;
+            }
+
+            .btn:hover {
+                background: #9aa9ab;
+            }
+        </style>
+        {#<a href="/date-selection" class="btn btn-info" style="font-size: 20px; color: white; background-color: #9aa9ab; border: #9aa9ab;">Вернуться к выбору даты</a>#}
+        <a href="/date-selection" class="btn">Вернуться к выбору даты</a>
+        <a href="/" class="btn" style="float: right;">На главную страницу</a>
+        <br>
+    </div>
+    {#    <h3 class="fs-2">{{ date_test }}</h3>#}
     <p><span class="fs-2"></span><br/>
         <span class="fw-bold">{% if success %}{{ date_test }}
             <style>
@@ -51,25 +57,28 @@ All lessons
                      justify-content: center;
                      height: 800px;
                      width: 90%;
-                     //left: 50%;
+                 / / left: 50 %;
                      background: #c6d2da;
                      flex-shrink: 2;
-                     text-decoration:none;
-                     color:white;
+                     text-decoration: none;
+                     color: white;
                      vertical-align: middle;
                      border: none;
                  }
+
                  .fig {
-                   //align-items: stretch;
-                   align-items: center;
-                   border: none;
+                 / / align-items: stretch;
+                     align-items: center;
+                     border: none;
                  }
+
                  .card_block {
-                   display: flex;
-                   flex-direction: column;
-                   align-items: flex-start;
-                   border: none;
+                     display: flex;
+                     flex-direction: column;
+                     align-items: flex-start;
+                     border: none;
                  }
+
                  .card {
                      margin: auto;
                      display: block;
@@ -78,7 +87,7 @@ All lessons
             </style>
             <div id="card_block" class="card">
                 <div id="block" class="fig">
-                    <a class = "card_fig">
+                    <a class="card_fig">
                     </a>
                 </div>
                         <picture>
@@ -88,8 +97,8 @@ All lessons
             </div>
         {% else %}Ваш запрос завершился с ошибкой{% endif %}</span>.
     </p>
-    <h2 class="pb-2 border-bottom">Комментарий</h2>
-    <p>{{ comment }}</p>
+    {#    <h2 class="pb-2 border-bottom">Комментарий</h2>#}
+    {#    <p>{{ comment }}</p>#}
 {% endblock %}
 
 
@@ -106,7 +115,7 @@ All lessons
 {#                        width: 90%;#}
 {#                        max-width: 900px;#}
 {#                        display: block;#}
-                        {#border-radius: 10px;#}
+{#border-radius: 10px;#}
 {#                        /*flex-shrink: 0;*/#}
 {#                        align-items: center;#}
 {#                       /*top: 50%;*/#}
@@ -137,13 +146,13 @@ All lessons
 <!--          </thead>-->
 <!--          <tbody>-->
 <!--            {% for id, topic, word, translation in words %}-->
-<!--            <tr>-->
-<!--                <td class="py-3">{{ id }}</td>-->
-<!--                <td class="py-3">{{ topic }}</td>-->
-<!--                <td class="py-3">{{ word }}</td>-->
-<!--                <td class="py-3">{{ translation }}</td>-->
-<!--            </tr>-->
-<!--            {% endfor %}-->
+    <!--            <tr>-->
+    <!--                <td class="py-3">{{ id }}</td>-->
+    <!--                <td class="py-3">{{ topic }}</td>-->
+    <!--                <td class="py-3">{{ word }}</td>-->
+    <!--                <td class="py-3">{{ translation }}</td>-->
+    <!--            </tr>-->
+    <!--            {% endfor %}-->
 <!--          </tbody>-->
 <!--        </table>-->
 <!--      </div>-->
